# my_blog_2026_05

./: .env.example  .github-workflows-example.yml  .gitignore  DEV_GUIDE.md  DOCKER_CHECKLIST.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  DOCKER_SETUP_COMPLETE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-manage.ps1  docker-manage.sh  pyproject.toml  redis.conf.example
backend/: .dockerignore  .env.docker.example  .env.example  Dockerfile  aerich.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  create_admin.py  pyproject.toml  test_articles.py  test_auth.py
backend/app/: main.py
backend/app/common/: exceptions.py  response.py  utils.py
backend/app/core/: config.py  database.py  dependencies.py  middleware.py  redis_client.py  security.py
backend/app/tasks/: README.md  __init__.py  ai_tasks.py  articles_tasks.py  backup_tasks.py  cache_tasks.py  celery_app.py  examples.py  notification_tasks.py  statistics_tasks.py  test_celery.py
backend/migrations/models/: 0_20260507151852_init.py  0_20260514022652_init.py  0_20260519030414_init.py  1_20260508212621_alter_article_view_user_agent_text.py  1_20260514050454_add_cover_image_variants.py  2_20260515104000_add_article_scheduled_publish.py  3_20260515183500_fix_scheduled_publish_timezone_storage.py  4_20260517_add_admin_notifications.py
backend/scripts/: backfill_cover_image_variants.py  purge_test_data.py
backend/tests/: conftest.py  test_ai_module.py  test_articles.py  test_auth.py  test_chatroom.py  test_comments.py  test_statistics.py  test_system.py
(+133 files in other folders)
