[project]
name = "blog-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "tortoise-orm[asyncpg]>=0.21.0",
    "aerich>=0.7.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.3",
    "passlib[bcrypt]>=1.7.4",
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    "aioredis>=2.0.1",
    "flower>=2.0.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "websockets>=12.0",
    "pillow>=10.3.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "markdown>=3.6",
]

[tool.aerich]
tortoise_orm = "app.core.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
